[package]
name = "aws-glacier-tool"
version = "0.1.0"
edition = "2021"
authors = ["Hannes Hochreiner <hannes@hochreiner.net>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive", "env"] }
