[package]
name = "aws-glacier-tool"
version = "0.1.0"
edition = "2021"
authors = ["Hannes Hochreiner <hannes@hochreiner.net>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.1", features = ["derive", "env"] }
hex = "0.4.3"
hyper = { version = "0.14.25", features = ["full"] }
ring = { version = "0.16.20", features = ["std"] }
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
